syntax = "proto3";
package net.proto;

import "message_type.proto";

option java_multiple_files = true;
option java_package = "com.musicocracy.fpgk.net.proto";
option java_outer_classname = "PlayRequestMsgProto";

message PlayRequestMsg {
    MessageType type = 1;
    string requester_id = 2;
    string music_service = 3;
    string song_id = 4;
}
